// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should lint without error > .github/workflows/empty-name.yml 1`] = `
[
  {
    "column": 1,
    "endColumn": 13,
    "endLine": 6,
    "line": 1,
    "message": "Require action name to be set.",
    "messageId": "requireActionName",
    "nodeType": "YAMLMapping",
    "ruleId": "github-action/require-action-name",
    "severity": 2,
  },
]
`;

exports[`should lint without error > .github/workflows/no-name-yaml.yaml 1`] = `
[
  {
    "column": 1,
    "endColumn": 13,
    "endLine": 4,
    "line": 1,
    "message": "Require action name to be set.",
    "messageId": "requireActionName",
    "nodeType": "YAMLMapping",
    "ruleId": "github-action/require-action-name",
    "severity": 2,
  },
]
`;

exports[`should lint without error > .github/workflows/no-name-yml.yml 1`] = `
[
  {
    "column": 1,
    "endColumn": 13,
    "endLine": 4,
    "line": 1,
    "message": "Require action name to be set.",
    "messageId": "requireActionName",
    "nodeType": "YAMLMapping",
    "ruleId": "github-action/require-action-name",
    "severity": 2,
  },
]
`;

exports[`should lint without error > .github/workflows/with-name-yaml.yaml 1`] = `[]`;

exports[`should lint without error > .github/workflows/with-name-yml.yml 1`] = `[]`;
